--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 m
+        eta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <!-- Bootstrap -->
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
         <title>{{ title|e if title else "Bokeh Plot" }}</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script>
-            $( document ).ajaxStart(function() {
-            alert('je')
-            });
         </script>
         {{ bokeh_css }}
         {{ bokeh_js }}
@@ -26,14 +35,27 @@
               font-family: 'Noto Sans', sans-serif;
               -webkit-font-smoothing: antialiased;
               text-rendering: optimizeLegibility;
-              color: gray;
-              background: #2F2F2F;
+              color: E2E2E2;
+              background: #BBBBBB;
              }
+            
         </style>
     </head>
     <body>
-    <h2>TemplateUsageTest</h2>
+        <div class="jumbotron">
+            <div class="container">
+            <h2>Albatross</h2>
+            <p>Linked (Open) Data Processing and Analysis</p>
+            <p>Created by the DataBio Linked Data Group</p>
+            </div>    
+        </div>
+        <div class="container">
         {{ plot_div|indent(8) }}
         {{ plot_script|indent(8) }}
+        </div>
+        
+        <div class="footer container">
+        <p>@databio</p>
+        </div>    
     </body>
 </html>
