--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,11 @@
         <![endif]-->
         <title>{{ title|e if title else "Bokeh Plot" }}</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        
+        
         <script>
         </script>
-        {{ bokeh_css }}
-        {{ bokeh_js }}
         <style>
           html {
             width: 100%;
@@ -29,6 +30,9 @@
             width: 90%;
             height: 100%;
             margin: auto;
+          }
+          .bk-root .bk-grid-column {
+            float:left; 
           }
         @import url(https://fonts.googleapis.com/css?family=Noto+Sans);
             body {
@@ -50,9 +54,8 @@
             </div>    
         </div>
         <div class="container">
-        {{ plot_div|indent(8) }}
-        {{ plot_script|indent(8) }}
-        </div>
+         {{ script|safe }}
+         </div>
         
         <div class="footer container">
         <p>@databio</p>
