--- a/templates/download.html
+++ b/templates/download.html
@@ -43,7 +43,7 @@
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default">
           <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -53,19 +53,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="css/logo_m.png" height="px;" /></a>
+              <a class="navbar-brand" href="#">Brand</a>
             </div>
          
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Main <span class="sr-only">(current)</span></a></li>
-                <li><a href="/download">Download Center</a></li>
+                <li><a href="/">Main </span></a></li>
+                <li class="active"><a href="/download">Download Center <span class="sr-only">(current)</span></a></li>
               </ul>
             </div>
           </div>
         </nav>
-        
         <div class="jumbotron">
             <div class="container">
             <h2>Albatross</h2>
@@ -74,9 +73,39 @@
             </div>    
         </div>
         <div class="container" style="min-height:500px;">
-         {{ script|safe }}
-         </div>
-        
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Downloaded Eurostats Datasets</h2>
+                     <ul>
+                        {% for org_file in original_obslist %}
+                            
+                        <li><a href="{{ org_file["url"] }}" target="_blank">{{ org_file["id"] }}</a></li>
+                            
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h2>Created RDFs</h2>
+                     <ul>
+                        {% for rdf_file in rdf_obslist %}
+                            
+                        <li><a href="{{ rdf_file["url"] }}" target="_blank">{{ rdf_file["id"] }}</a></li>
+                            
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h2>Created Geojsons</h2>
+                     <ul>
+                        {% for geo_file in geojson_obslist %}
+                            
+                        <li><a href="{{ geo_file["url"] }}" target="_blank">{{ geo_file["id"] }}</a></li>
+                            
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
         <footer class="footer" style="background:#363839;color:#8c8989;">        
             <div class="container">
                 <div class="row">
