--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="css/logo_m.png" height="px;" /></a>
+              <a class="navbar-brand" href="#"><img src="css/logo_m.png" height="30px;" /></a>
             </div>
          
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,7 +73,7 @@
             <p>Created by the DataBio Linked Data Group</p>
             </div>    
         </div>
-        <div class="container" style="min-height:500px;">
+        <div class="jumbotron" style="min-height:500px;">
          {{ script|safe }}
          </div>
         
