Repaired Download Center
the directory structure for the geojsons is as follows:

data
└── geojson
    └── eurostats
        ├── nuts_1
        │   ├── aact_ali01.geojson
        │   ├── aei_pr_soiler.geojson
        │   └── trng_lfse_04.geojson
        ├── nuts_2
        │   ├── aact_ali01.geojson
        │   ├── aei_pr_soiler.geojson
        │   └── trng_lfse_04.geojson
        ├── nuts_3
        │   ├── aact_ali01.geojson
        │   ├── aei_pr_soiler.geojson
        │   └── trng_lfse_04.geojson
        ├── nuts_rg_60M_2013_lvl_1.geojson
        ├── nuts_rg_60M_2013_lvl_2.geojson
        └── nuts_rg_60M_2013_lvl_3.geojson

--- a/templates/download.html
+++ b/templates/download.html
@@ -97,9 +97,17 @@
                 <div class="col-md-4">
                     <h2>Created Geojsons</h2>
                      <ul>
-                        {% for geo_file in geojson_obslist %}
-                            
-                        <li><a href="{{ geo_file["url"] }}" target="_blank">{{ geo_file["id"] }}</a></li>
+                        {% for geo_level in geojson_levels %}
+
+                         <li>{{ geo_level["display_name"] }}
+                            <ul>
+                                {% for geo_file in geojson_files[geo_level["dir_name"]] %}
+
+                                <li><a href="{{ geo_file["url"] }}" target="_blank">{{ geo_file["id"] }}</a></li>
+
+                                {% endfor %}
+                            </ul>
+                         </li>
                             
                         {% endfor %}
                     </ul>
