--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,7 @@
         <div class="jumbotron">
             <div class="container">
             <h2>Albatross</h2>
-            <p>Linked (Open) Data Processing and Analysis</p>
-            <p>Created by the DataBio Linked Data Group</p>
+            <p>Linked (Open) Data Processing and Analysis<br>Created by the DataBio Linked Data Group</p>
             </div>    
         </div>
         <div class="jumbotron" style="min-height:500px;">
